--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
   "name": "oa2",
+  "private": true,
   "packageManager": "pnpm@9.0.6+sha256.0624e30eff866cdeb363b15061bdb7fd9425b17bc1bb42c22f5f4efdea21f6b3"
 }
