--- a/api/server/Cargo.toml
+++ b/api/server/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.5"
+sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid"] }
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
