--- a/web-server/package.json
+++ b/web-server/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "api-ts": "link:../api-ts",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
