--- a/web-server/package.json
+++ b/web-server/package.json
@@ -7,7 +7,8 @@
     "prepare": "panda codegen",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "eslint ./src"
   },
   "dependencies": {
     "api-ts": "link:../api-ts",
@@ -15,8 +16,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.2",
+    "@eslint/js": "^9.4.0",
     "@pandacss/dev": "^0.38.0",
+    "@pandacss/eslint-plugin": "^0.1.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-solid": "^0.14.0",
+    "globals": "^15.3.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2",
     "vitest": "^1.5.3"
