--- a/web-server/package.json
+++ b/web-server/package.json
@@ -8,20 +8,22 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "check": "eslint ./src"
+    "check": "eslint ./src && prettier --check ./src",
+    "fix-fmt": "prettier --write ./src",
+    "fix-eslint": "eslint --fix ./src"
   },
   "dependencies": {
     "api-ts": "link:../api-ts",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.2",
     "@eslint/js": "^9.4.0",
     "@pandacss/dev": "^0.38.0",
     "@pandacss/eslint-plugin": "^0.1.5",
     "eslint": "^8.57.0",
     "eslint-plugin-solid": "^0.14.0",
     "globals": "^15.3.0",
+    "prettier": "^3.3.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.11.0",
     "vite": "^5.2.0",
