--- a/web-server/package.json
+++ b/web-server/package.json
@@ -13,6 +13,7 @@
     "fix-eslint": "eslint --fix ./src"
   },
   "dependencies": {
+    "@ark-ui/solid": "^3.0.2",
     "api-ts": "link:../api-ts",
     "solid-js": "^1.8.15"
   },
