--- a/web-server/package.json
+++ b/web-server/package.json
@@ -5,30 +5,31 @@
   "type": "module",
   "scripts": {
     "prepare": "panda codegen",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "preview": "vinxi preview",
     "check": "eslint ./src && prettier --check ./src",
     "fix-fmt": "prettier --write ./src",
     "fix-eslint": "eslint --fix ./src"
   },
-  "dependencies": {
-    "@ark-ui/solid": "^3.0.2",
-    "api-ts": "link:../api-ts",
-    "solid-js": "^1.8.15"
-  },
   "devDependencies": {
+    "@ark-ui/solid": "^3.2.1",
     "@eslint/js": "^9.4.0",
     "@pandacss/dev": "^0.38.0",
     "@pandacss/eslint-plugin": "^0.1.5",
+    "@solidjs/router": "^0.13.5",
+    "@solidjs/start": "^1.0.1",
+    "api-ts": "link:../api-ts",
     "eslint": "^8.57.0",
     "eslint-plugin-solid": "^0.14.0",
     "globals": "^15.3.0",
-    "prettier": "^3.3.0",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^7.11.0",
-    "vite": "^5.2.0",
+    "prettier": "^3.3.1",
+    "solid-js": "^1.8.17",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.12.0",
+    "vinxi": "^0.3.11",
+    "vite": "^5.2.12",
     "vite-plugin-solid": "^2.10.2",
-    "vitest": "^1.5.3"
+    "vitest": "^1.6.0"
   }
 }
