--- a/web-server/package.json
+++ b/web-server/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "prepare": "panda codegen",
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "preview": "vinxi preview",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "check": "eslint ./src && prettier --check ./src",
     "fix-fmt": "prettier --write ./src",
     "fix-eslint": "eslint --fix ./src"
@@ -18,7 +18,6 @@
     "@pandacss/dev": "^0.38.0",
     "@pandacss/eslint-plugin": "^0.1.5",
     "@solidjs/router": "^0.13.5",
-    "@solidjs/start": "^1.0.1",
     "api-ts": "link:../api-ts",
     "eslint": "^8.57.0",
     "eslint-plugin-solid": "^0.14.0",
@@ -27,7 +26,6 @@
     "solid-js": "^1.8.17",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0",
-    "vinxi": "^0.3.11",
     "vite": "^5.2.12",
     "vite-plugin-solid": "^2.10.2",
     "vitest": "^1.6.0"
