--- a/api-spec/package.json
+++ b/api-spec/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "build": "tsp compile .",
+    "build": "node ./build.js all",
     "dev": "tsp compile . --watch"
   },
   "private": true,
@@ -11,6 +11,7 @@
     "@typespec/compiler": "0.55.0",
     "@typespec/http": "0.55.0",
     "@typespec/openapi3": "0.55.0",
-    "@typespec/rest": "0.55.0"
+    "@typespec/rest": "0.55.0",
+    "yargs": "^17.7.2"
   }
 }
