--- a/web-server/package.json
+++ b/web-server/package.json
@@ -18,12 +18,12 @@
     "@pandacss/dev": "^0.38.0",
     "@pandacss/eslint-plugin": "^0.1.5",
     "@solidjs/router": "^0.13.5",
-    "api-ts": "link:../api-ts",
     "eslint": "^8.57.0",
     "eslint-plugin-solid": "^0.14.0",
     "globals": "^15.3.0",
     "prettier": "^3.3.1",
     "solid-js": "^1.8.17",
+    "ts-client": "link:../api-spec/ts-client",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0",
     "vite": "^5.2.12",
